language/move-lang/tests/move_check/translated_ir_tests/signer/is_resource_read_ref.exp
error: 

   ┌── tests/move_check/translated_ir_tests/signer/is_resource_read_ref.move:3:9 ───
   │
 3 │         *s
   │         ^^ Invalid dereference. Can only dereference references to copyable types
   ·
 2 │     fun t(s: &signer): signer {
   │               ------ The type: 'signer'
   ·
 2 │     fun t(s: &signer): signer {
   │               ------ Is found to be a non-copyable type here
   │

